--- a/records.html
+++ b/records.html
@@ -62,6 +62,39 @@
       text-align: left;
       width: 100%;
     }
+    .mobile-topbar {
+      display: none;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 16px;
+      background: #0b1220;
+      color: #e5e7eb;
+      position: sticky;
+      top: 0;
+      z-index: 40;
+    }
+    .mobile-brand {
+      color: #e5e7eb;
+      text-decoration: none;
+      font-weight: 700;
+      letter-spacing: -0.01em;
+    }
+    .mobile-menu-btn {
+      background: transparent;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      color: #e5e7eb;
+      padding: 8px 12px;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    .mobile-overlay {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(15, 23, 42, 0.45);
+      z-index: 35;
+    }
     .nav-item {
       display: block;
       padding: 10px 12px;
@@ -299,16 +332,20 @@
 
     @media (max-width: 980px) {
       .app-layout { flex-direction: column; }
+      .mobile-topbar { display: flex; }
       .side-nav {
-        width: 100%;
-        height: auto;
-        position: sticky;
+        position: fixed;
+        left: 0;
         top: 0;
-        z-index: 30;
-        border-right: none;
-        border-bottom: 1px solid #111827;
+        height: 100vh;
+        width: 260px;
+        transform: translateX(-100%);
+        transition: transform 0.25s ease;
+        z-index: 50;
       }
-      .nav-items { grid-auto-flow: column; grid-auto-columns: minmax(120px, 1fr); }
+      .nav-open .side-nav { transform: translateX(0); }
+      .nav-open .mobile-overlay { display: block; }
+      .nav-open { overflow: hidden; }
       header { padding: 56px 20px 32px; }
       .top-row { flex-direction: column; align-items: flex-start; gap: 14px; }
       .top-row > div { flex-wrap: wrap; }
@@ -328,6 +365,11 @@
 </head>
 <body>
   <div class="app-layout">
+    <div class="mobile-topbar">
+      <a class="mobile-brand" href="index.html">CarbonWise</a>
+      <button class="mobile-menu-btn" id="mobile-nav-toggle" type="button">Menu</button>
+    </div>
+    <div class="mobile-overlay" id="mobile-nav-overlay"></div>
     <aside class="side-nav">
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
@@ -1422,6 +1464,21 @@
       } else {
         showMessage('History unavailable while offline.');
       }
+    })();
+  </script>
+  <script>
+    (function initMobileNav() {
+      const toggle = document.getElementById('mobile-nav-toggle');
+      const overlay = document.getElementById('mobile-nav-overlay');
+      if (!toggle || !overlay) return;
+      const closeNav = () => document.body.classList.remove('nav-open');
+      toggle.addEventListener('click', () => {
+        document.body.classList.toggle('nav-open');
+      });
+      overlay.addEventListener('click', closeNav);
+      document.querySelectorAll('.nav-item').forEach((link) => {
+        link.addEventListener('click', closeNav);
+      });
     })();
   </script>
 </body>
