Reorder scope nav and clarify scope meaning

--- a/scope1.html
+++ b/scope1.html
@@ -338,8 +338,8 @@
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
-        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope1.html" class="nav-item active" data-nav="scope1">Scope 1 Records</a>
+        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope3.html" class="nav-item" data-nav="scope3">Scope 3 Screening</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
@@ -354,6 +354,7 @@
         <div class="shell">
           <h1>Scope 1 Records</h1>
           <p class="subhead">Natural gas entries saved for reporting and exports.</p>
+          <p class="note">Scope 1 is fuel you burn on site (like natural gas boilers or heaters), not electricity or supplier emissions.</p>
         </div>
       </header>
 
