--- a/records.html
+++ b/records.html
@@ -374,8 +374,8 @@
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
-        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
+        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope3.html" class="nav-item" data-nav="scope3">Scope 3 Screening</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
@@ -390,7 +390,7 @@
         <div class="shell">
           <div class="top-row"></div>
           <h1>Scope 2 Records</h1>
-          <p class="subhead">Your saved emissions.</p>
+          <p class="subhead">Scope 2 is purchased electricity you use from the grid. We estimate emissions using location-based factors.</p>
         </div>
       </header>
 
