--- a/scope3.html
+++ b/scope3.html
@@ -307,8 +307,8 @@
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
-        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
+        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope3.html" class="nav-item active" data-nav="scope3">Scope 3 Screening</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
@@ -324,6 +324,7 @@
           <div class="pill">Scope 3 Screening</div>
           <h1>Scope 3 (Estimated — Spend-based)</h1>
           <p class="subhead">Screening-level, spend-based Scope 3 estimates using EIO factors. Built for prioritization, not audits.</p>
+          <p class="note">Scope 3 covers value-chain emissions from suppliers and services outside your operations. This page estimates them from spend categories.</p>
         </div>
       </header>
 
