Refine exports included lists and year labels

--- a/exports.html
+++ b/exports.html
@@ -207,12 +207,10 @@
           <section class="card" style="margin-top:14px;">
             <h3 style="margin-top:0;">What’s included</h3>
             <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
-              <li>Scope 2: period (YYYY-MM), electricity usage (kWh), and location-based/market-based emissions (tCO₂e)</li>
-              <li>Scope 2 emission factor value, year, and source</li>
-              <li>Scope 1: period (YYYY-MM), fuel quantity, unit, and emissions (tCO₂e)</li>
-              <li>Scope 1 emission factor value, year, and source</li>
-              <li>Scope 3: spend amount, category, EIO sector reference, and emissions (tCO₂e)</li>
-              <li>Disclosure statements for Scope 1, Scope 2, and Scope 3 exports</li>
+              <li>Company name, period (YYYY-MM), and country/region</li>
+              <li>Electricity usage (kWh) with location-based and market-based emissions (tCO₂e)</li>
+              <li>Emission factor value, year, and source</li>
+              <li>Disclosure line for location-based Scope 2 (GHG Protocol)</li>
             </ul>
           </section>
         </div>
@@ -236,6 +234,15 @@
             <p class="note">Scope 1 emissions are estimates based on user-provided fuel data. Results may be partial and do not represent full Scope 1 coverage.</p>
             <p class="note">Methodology: <a href="methodology.html#scope-1">See Scope 1 methodology</a>.</p>
           </section>
+          <section class="card" style="margin-top:14px;">
+            <h3 style="margin-top:0;">What’s included</h3>
+            <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
+              <li>Scope, category, and fuel type (stationary combustion — natural gas)</li>
+              <li>Period (YYYY-MM), fuel quantity, and unit</li>
+              <li>Emissions (tCO₂e) with factor value, year, and source</li>
+              <li>Disclosure line for Scope 1 estimates</li>
+            </ul>
+          </section>
         </div>
 
         <div class="tab-panel" data-tab="scope3">
@@ -256,6 +263,14 @@
             </div>
             <p class="note">Scope 3 emissions shown here are screening-level estimates calculated using spend-based environmentally extended input-output (EIO) models. Results are indicative only and subject to high uncertainty.</p>
             <p class="note">Methodology: <a href="methodology.html#scope-3">See Scope 3 methodology</a>.</p>
+          </section>
+          <section class="card" style="margin-top:14px;">
+            <h3 style="margin-top:0;">What’s included</h3>
+            <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
+              <li>Category, spend amount, currency, and EIO sector reference</li>
+              <li>Emission factor value, year, and source</li>
+              <li>Emissions (tCO2e) and screening-level disclosure</li>
+            </ul>
           </section>
         </div>
       </div>
