--- a/records.html
+++ b/records.html
@@ -386,18 +386,10 @@
       </nav>
     </aside>
     <div class="app-content">
-      <header>
-        <div class="shell">
-          <div class="top-row"></div>
-          <h1>Scope 2 Records</h1>
-          <p class="subhead">Scope 2 is purchased electricity you use from the grid. We estimate emissions using location-based factors.</p>
-        </div>
-      </header>
-
       <div class="shell">
     <p class="note" id="records-auth-note">Log in on the main page to view your records.</p>
     <section class="carbon-summary">
-      <h2 style="margin:0;">Carbon Snapshot</h2>
+      <h2 style="margin:0;">Scope 2 Carbon Snapshot</h2>
       <div class="summary-grid">
         <div class="summary-card">
           <div class="label">Total Scope 2 electricity</div>
@@ -438,7 +430,7 @@
     </section>
         <section>
           <div class="records-controls">
-            <h2 style="margin:0;">Saved records</h2>
+            <h2 style="margin:0;">Saved Scope 2 records</h2>
             <div class="records-actions">
               <!-- Export respects the current filters to avoid mismatched downloads -->
               <button class="btn secondary" id="records-export-csv" type="button">Export CSV</button>
