Improve scope context copy and dashboard control sizing

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,9 +86,9 @@
     section { margin-top: 20px; background: #fff; border: 1px solid var(--line); border-radius: 16px; padding: 18px; box-shadow: 0 12px 30px rgba(15,23,42,0.08); }
     .dashboard-top { margin-top: 8px; }
     .controls { display: grid; gap: 12px; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); align-items: end; }
-    label { font-weight: 600; display: block; margin-bottom: 6px; color: var(--muted); }
-    select { width: 100%; padding: 10px; border-radius: 10px; border: 1px solid var(--line); font-size: 1rem; background: #fff; }
-    .toggle-group { display: inline-flex; gap: 8px; background: #f8fafc; border: 1px solid var(--line); padding: 6px; border-radius: 999px; }
+    label { font-weight: 700; display: block; margin-bottom: 6px; color: var(--muted); font-size: 1.05rem; }
+    select { width: 100%; padding: 10px; border-radius: 10px; border: 1px solid var(--line); font-size: 1.05rem; background: #fff; }
+    .toggle-group { display: inline-flex; gap: 8px; background: #f8fafc; border: 1px solid var(--line); padding: 6px; border-radius: 999px; font-size: 1.05rem; }
     .toggle-group button {
       border: none;
       background: transparent;
