--- a/records.html
+++ b/records.html
@@ -419,7 +419,7 @@
         </div>
       </div>
       <!-- Trust note for audit clarity -->
-      <p class="note">Calculated using location-based factors (tCO₂e). <a href="methodology.html">See Methodology</a>.</p>
+      <p class="note">Scope 2 is purchased electricity you use from the grid. Calculated using location-based factors (tCO₂e). <a href="methodology.html">See Methodology</a>.</p>
     </section>
     <section class="carbon-reminders">
       <h3>Insights & Reminders</h3>
