--- a/scope1.html
+++ b/scope1.html
@@ -378,7 +378,7 @@
               <div class="unit">months</div>
             </div>
           </div>
-          <p class="note">Scope 1 estimates are based on user-provided fuel data. <a href="methodology.html#scope-1">See Methodology</a>.</p>
+          <p class="note">Scope 1 is fuel you burn on site (like natural gas boilers or heaters). Scope 1 estimates are based on user-provided fuel data. <a href="methodology.html#scope-1">See Methodology</a>.</p>
         </section>
         <section class="carbon-reminders">
           <h3>Insights & Reminders</h3>
