--- a/scope3.html
+++ b/scope3.html
@@ -353,7 +353,7 @@
               <div class="unit">months</div>
             </div>
           </div>
-          <p class="note">Screening-level estimates only; not included in Scope 1 + Scope 2 totals. <a href="methodology.html#scope-3">See Methodology</a>.</p>
+          <p class="note">Scope 3 covers value-chain emissions from suppliers and services outside your operations. Screening-level estimates only; not included in Scope 1 + Scope 2 totals. <a href="methodology.html#scope-3">See Methodology</a>.</p>
         </section>
         <section class="carbon-reminders">
           <h3>Insights & Reminders</h3>
