Restore compact page titles for tests

--- a/exports.html
+++ b/exports.html
@@ -81,6 +81,7 @@
     }
     h1 { margin: 0 0 10px; font-size: clamp(28px, 4vw, 36px); letter-spacing: -0.01em; }
     p.muted { color: var(--muted); margin: 0 0 12px; }
+    .page-title { margin: 4px 0 10px; font-size: 1.5rem; letter-spacing: -0.01em; }
     .card { background: #fff; border: 1px solid var(--line); border-radius: 14px; padding: 18px; box-shadow: 0 12px 30px rgba(15,23,42,0.08); }
     .stack { display: grid; gap: 12px; }
     label { font-weight: 600; display: block; margin-bottom: 4px; }
@@ -178,6 +179,7 @@
     </aside>
     <div class="app-content">
       <div class="shell">
+        <h1 class="page-title">Export / Reports</h1>
         <div class="tab-header">
           <button type="button" class="tab-button active" data-tab-target="scope2">Scope 2 electricity</button>
           <button type="button" class="tab-button" data-tab-target="scope1">Scope 1 natural gas</button>
