--- a/settings.html
+++ b/settings.html
@@ -82,6 +82,7 @@
     }
     h1 { margin: 0 0 10px; font-size: clamp(28px, 4vw, 36px); letter-spacing: -0.01em; }
     p.muted { color: var(--muted); margin: 0 0 12px; }
+    .page-title { margin: 4px 0 10px; font-size: 1.5rem; letter-spacing: -0.01em; }
     .card { background: #fff; border: 1px solid var(--line); border-radius: 14px; padding: 18px; box-shadow: 0 12px 30px rgba(15,23,42,0.08); }
     .stack { display: grid; gap: 12px; }
     .row { display: grid; gap: 12px; grid-template-columns: repeat(2, minmax(0, 1fr)); }
@@ -159,6 +160,7 @@
     </aside>
     <div class="app-content">
       <div class="shell">
+        <h1 class="page-title">Settings</h1>
         <section class="card stack">
           <form id="company-form" class="stack">
             <div>
