Add Scope 3 actuals input path

--- a/exports.html
+++ b/exports.html
@@ -269,8 +269,9 @@
           <section class="card" style="margin-top:14px;">
             <h3 style="margin-top:0;">What’s included</h3>
             <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
-              <li>Category, spend amount, currency, and EIO sector reference</li>
-              <li>Emission factor value, year, and source</li>
+              <li>Method (spend-based or actuals), category, and emissions source</li>
+              <li>Spend amount, currency, and EIO sector reference (for spend-based records)</li>
+              <li>Emission factor value, year, and source (for spend-based records)</li>
               <li>Emissions (tCO2e) and screening-level disclosure</li>
             </ul>
           </section>
