--- a/scope3.html
+++ b/scope3.html
@@ -386,18 +386,26 @@
                 <option value="">All</option>
               </select>
             </label>
-            <label>
-              Category
-              <select id="filterCategory">
-                <option value="">All</option>
-              </select>
-            </label>
-            <label>
-              Country
-              <select id="filterCountry">
-                <option value="">All</option>
-              </select>
-            </label>
+          <label>
+            Category
+            <select id="filterCategory">
+              <option value="">All</option>
+            </select>
+          </label>
+          <label>
+            Method
+            <select id="filterMethod">
+              <option value="">All</option>
+              <option value="eio">Spend-based (EIO)</option>
+              <option value="actual">Vendor-reported actuals</option>
+            </select>
+          </label>
+          <label>
+            Country
+            <select id="filterCountry">
+              <option value="">All</option>
+            </select>
+          </label>
             <label>
               Region
               <select id="filterRegion">
