Add monthly period for scope3 records

--- a/exports.html
+++ b/exports.html
@@ -269,7 +269,7 @@
           <section class="card" style="margin-top:14px;">
             <h3 style="margin-top:0;">What’s included</h3>
             <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
-              <li>Method (spend-based or actuals), category, and emissions source</li>
+              <li>Period (YYYY-MM), method (spend-based or actuals), category, and emissions source</li>
               <li>Spend amount, currency, and EIO sector reference (for spend-based records)</li>
               <li>Emission factor value, year, and source (for spend-based records)</li>
               <li>Emissions (tCO2e) and screening-level disclosure</li>
