--- a/scope3.html
+++ b/scope3.html
@@ -421,7 +421,7 @@
             <thead>
               <tr>
                 <th>Emissions</th>
-                <th>Spend & category</th>
+                <th>Category</th>
                 <th></th>
               </tr>
             </thead>
