--- a/scope3.html
+++ b/scope3.html
@@ -422,6 +422,7 @@
               <tr>
                 <th>Emissions</th>
                 <th>Category</th>
+                <th>Method</th>
                 <th></th>
               </tr>
             </thead>
