--- a/scope3.html
+++ b/scope3.html
@@ -249,18 +249,20 @@
     .panel-hint { font-size: 0.9rem; color: var(--muted); margin-top: -6px; }
     .slide-panel {
       position: fixed;
-      right: 24px;
-      top: 120px;
-      width: min(420px, 90vw);
+      top: 0;
+      right: 0;
+      width: min(420px, 100%);
+      height: 100%;
       background: #fff;
-      border: 1px solid #e5e7eb;
-      border-radius: 16px;
-      box-shadow: 0 24px 80px rgba(15, 23, 42, 0.15);
-      padding: 18px;
-      display: none;
-      z-index: 40;
+      border-left: 1px solid #e5e7eb;
+      box-shadow: -8px 0 24px rgba(15, 23, 42, 0.1);
+      padding: 16px;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: transform 0.25s ease;
+      z-index: 1000;
     }
-    .slide-panel.active { display: block; }
+    .slide-panel.active { transform: translateX(0); }
     .slide-panel.hidden { display: none; }
     .disclosure {
       background: #fff7ed;
@@ -302,7 +304,6 @@
       .records-filters input { width: 100%; min-width: 0; }
       .panel-row { grid-template-columns: minmax(0, 1fr); }
       .panel-actions { flex-direction: column; align-items: stretch; }
-      .slide-panel { right: 16px; top: 100px; }
     }
   </style>
 </head>
